--- a/projects/igniteui-angular/date-picker/src/date-range-picker/themes/shared/_fluent.scss
+++ b/projects/igniteui-angular/date-picker/src/date-range-picker/themes/shared/_fluent.scss
@@ -7,5 +7,8 @@
 $_theme: $fluent;
 
 @include themed-block(igx-date-range-picker, fluent) {
-    --input-group-size: #{map.get($_theme, 'size')};
+    .igx-input-group:not(:has(.igx-input-group__label)) {
+        --_bundle-row: 1;
+        --_hint-row: 2;
+    }
 }
