--- a/projects/igniteui-angular/date-picker/src/date-range-picker/themes/shared/_indigo.scss
+++ b/projects/igniteui-angular/date-picker/src/date-range-picker/themes/shared/_indigo.scss
@@ -7,7 +7,9 @@
 $_theme: $indigo;
 
 @include themed-block(igx-date-range-picker, indigo) {
-    --input-group-size: #{map.get($_theme, 'size')};
-
+    .igx-input-group:not(:has(.igx-input-group__label)) {
+        --_bundle-row: 1;
+        --_hint-row: 2;
+    }
 }
 
