--- a/projects/igniteui-angular/date-picker/src/date-range-picker/themes/shared/_material.scss
+++ b/projects/igniteui-angular/date-picker/src/date-range-picker/themes/shared/_material.scss
@@ -7,5 +7,12 @@
 $_theme: $material;
 
 @include themed-block(igx-date-range-picker, material) {
-    --input-group-size: #{map.get($_theme, 'size')};
+    &:has(.igx-input-group__label) .igx-date-range-picker__label {
+        grid-row: 1;
+    }
+
+    .igx-input-group:not(:has(.igx-input-group__label)) {
+        --_bundle-row: 1;
+        --_hint-row: 2;
+    }
 }
