--- a/projects/igniteui-angular/input-group/src/input-group/themes/shared/material.scss
+++ b/projects/igniteui-angular/input-group/src/input-group/themes/shared/material.scss
@@ -25,6 +25,11 @@ $input-bottom-spacing: rem(6px);
         --_hint-row: 2;
     }
 
+    &:not(:has(.igx-input-group__label)) {
+        --_bundle-row: 1;
+        --_hint-row: 2;
+    }
+
     row-gap: rem(4px);
 
     @include e(bundle) {
